# platform.core.appfw.appcore-agent

./: CMakeLists.txt  appcore-agent.pc.in  capi-appfw-service-application.pc.in  project.config
debian/: changelog  control  libappcore-agent-dev.install.in  rules
doc/: appcore-agent_doc.h
include/: appcore-agent.h  service_app.h  service_app_private.h
packaging/: appcore-agent.changes  appcore-agent.spec
src/: appcore-agent.c  service_app_error.c  service_app_main.c  service_app_private.h
test/: test.c
